# ds-event-stream-rust-sdk

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: docs.yaml  lint.yaml  publish.yaml  security.yaml  tests.yaml
src/: error.rs  lib.rs
src/consumer/: error.rs  mod.rs
src/model/: mod.rs  topics.rs  v1.rs
src/producer/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
tests/: test_consumer.rs  test_models.rs  test_producer.rs  test_utils.rs
